--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -44,10 +44,23 @@
                     <hr>
                     <div id="sidebarResultadosPorNombre"></div>
                 </div>
+                <div align="center">
+                    <script type="text/javascript"><!--
+                    google_ad_client = "ca-pub-1193419141108967";
+                    /* Anuncio 234x60 n1 */
+                    google_ad_slot = "9820069640";
+                    google_ad_width = 234;
+                    google_ad_height = 60;
+                    //-->
+                    </script>
+                    <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+                </div>
             </div>
             <div id="sidebarContenido"></div>
         </div>
-        <div align="center">
+    </div>
+    <div id="bloque_derecha">
+        <div align="center" style="position:absolute; z-index: 1000; top: 0; right: 0;">
             <script type="text/javascript"><!--
             google_ad_client = "ca-pub-1193419141108967";
             /* Anuncio 234x60 n1 */
@@ -56,12 +69,19 @@
             google_ad_height = 60;
             //-->
             </script>
-            <script type="text/javascript"
-            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+            <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+        </div> 
+        <div align="center" style="position:absolute; z-index: 1000; bottom: 0; right: 0;">
+            <script type="text/javascript"><!--
+            google_ad_client = "ca-pub-1193419141108967";
+            /* Anuncio 234x60 n1 */
+            google_ad_slot = "9820069640";
+            google_ad_width = 234;
+            google_ad_height = 60;
+            //-->
             </script>
-        </div>
-    </div>
-    <div id="bloque_derecha">
+            <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+        </div>        
         <div id="mapa" class="shadowbox"></div>
     </div>
 {% endblock %}
